--- a/front/package.json
+++ b/front/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
+    "jquery": "^3.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2",
@@ -37,5 +38,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy" :"http://127.0.0.1:8080"
+  "proxy": "http://127.0.0.1:8080"
 }
