--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "test20220318",
   "version": "1.0.0",
   "description": "",
-  "main": "bby.js",
+  "main": "server.js",
   "scripts": {
-    "start" : "concurrently --kill-others-on-fail \"npm run server\" \"npm run react\" ",
-    "react" : "cd front && npm start",
-    "server": "nodemon bby.js",
+    "start": "concurrently --kill-others-on-fail \"npm run server\" \"npm run react\" ",
+    "react": "cd front && npm start",
+    "server": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -23,6 +23,7 @@
   "dependencies": {
     "concurrently": "^7.0.0",
     "express": "^4.17.3",
+    "mybatis-mapper": "^0.6.7",
     "mysql": "^2.18.1"
   }
 }
