--- a/front/package.json
+++ b/front/package.json
@@ -7,11 +7,14 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
+    "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.0-beta.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "reactstrap": "^9.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
