--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "concurrently": "^7.0.0",
     "express": "^4.17.3",
     "mybatis-mapper": "^0.6.7",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "nodemon": "^2.0.15"
   }
 }
